2008-03-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpProgram.cmake: "WIN32 AND NOT CYGWIN" -> "MSVC"

	* conf/YarpLibrary.cmake: "WIN32 AND NOT CYGWIN" -> "MSVC"

	* conf/YarpCompileModules.cmake: corrected "WIN32 AND NOT CYGWIN"
	to "MSVC", which is probably what was intended.

2008-02-26 Lorenzo Natale <nat@liralab.it>

	* src/libYARP_dev/include/yarp/dev/CanBusInterface.h: new can bus
	virtual interface.

2008-02-26  Lorenzo Natale <nat@liralab.it>
	* conf/FindGtkPlus.cmake: fixed an apparent bug which caused cmake
	to pass $GTKPLUS_LIBRARY_DIR as a paramter to the linker.
	
2008-02-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/DEVICEConfig.cmake.in: remove unnecessary line that was
	causing a problem under MSVC.

	* conf/YARPConfig.cmake.in: link yarpmod correctly when using
	MSVC debug mode.

2008-02-19  Lorenzo Natale <nat@liralab.it>

	* conf/DEVICEConfig.cmake wrapped some paths with "" to support the
	use of blanks in path names on windows.

2008-02-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/add_a_device.dox: update documentation on how to
	add a device.

2008-02-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* scripts/autocheck-msvc8.sh: add script for automatic build
	that's as close as possible to msvc8 built through GUI.  This is
	for the test server, which for windows previously used visual studio
	express with nmake.

	* conf/FindAce.cmake: fix broken case where ace library not found
	on windows.

	* src/libYARP_dev/src/opencv_grabber/default/yarp/OpenCVGrabber.cpp: 
	applied patch from Stefan Freyr Stefansson to use camera index
	if one is specified.

2008-02-03  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/CUDA-nvidia: added support to the newly added BGRA 
	pixel type.

2008-02-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/Image.h: added BGRA type,
	with appropriate conversions to other types.

2008-01-31  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
