@@ -9,8 +9,8 @@ TARGET_LINK_LIBRARIES(yarp YARP_OS ${ACE_LINK_FLAGS})
 TARGET_LINK_LIBRARIES(yarpserver YARP_OS ${ACE_LINK_FLAGS})
 INSTALL_TARGETS(/bin yarp yarpserver)
 
-IF(WIN32 AND NOT CYGWIN)
+IF(MSVC)
     SET_TARGET_PROPERTIES(yarp PROPERTIES COMPILE_FLAGS /wd4996)
     SET_TARGET_PROPERTIES(yarpserver PROPERTIES COMPILE_FLAGS /wd4996)
-ENDIF(WIN32 AND NOT CYGWIN)
+ENDIF(MSVC)
  
