@@ -59,9 +59,9 @@ BEGIN_DEVICE_LIBRARY(yarpmod)
 
 END_DEVICE_LIBRARY(yarpmod)
 
-IF(WIN32 AND NOT CYGWIN)
+IF(MSVC)
     SET_TARGET_PROPERTIES(yarpmod PROPERTIES COMPILE_FLAGS /wd4996)
-ENDIF(WIN32 AND NOT CYGWIN)
+ENDIF(MSVC)
 
 INSTALL_TARGETS(/lib yarpmod)
 FILE(GLOB header ${YARP_DIR}/*.h)
