@@ -75,9 +75,9 @@ IF (YARP_ADMIN)
     ENDIF (CREATE_DEVICE_LIBRARY_MODULES)
     #TARGET_LINK_LIBRARIES(yarpview2 yarpmod)
     #TARGET_LINK_LIBRARIES(yarpview2 YARP_dev ${YARP_EXTMOD_TARGETS} ${YARP_dev_EXT_LIBS} YARP_sig YARP_OS)
-    IF(WIN32 AND NOT CYGWIN)
+    IF(MSVC)
         SET_TARGET_PROPERTIES(yarpview2 PROPERTIES COMPILE_FLAGS /wd4996)
-    ENDIF(WIN32 AND NOT CYGWIN)
+    ENDIF(MSVC)
     
 ENDIF (YARP_ADMIN)
 
